--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,12 +2,11 @@
 
 <header>
   <div class="smoothie">
-    <img src="/background.png" alt="">
   </div>
   <div class="headings">
     <h2>Images Repository</h2>
     <h3>By Tobe For Shopify</h3>
-    <a href="/images" class="btn">View Images</a>
+    <a href="/dashboard">View Images</a>
   </div>
 </header>
 
